--- a/.env.development.local
+++ b/.env.development.local
@@ -7,6 +7,6 @@ AUTH0_COOKIE_SECRET=297349274958y9586972398494969246
 AUTH0_NAMESPACE: http://mcct-co-op.us.auth0.com
 
 
-AUTH0_AUDIENCE=http://mcct-co-op.us.auth0.com/api/v2
-PORTFOLIO_API_URL=http://localhost:3001/api/v1
+AUTH0_AUDIENCE=https://mcct-co-op.us.auth0.com/api/v2/
+PORTFOLIO_API_URL=http://localhost:3001/api/v1/
 
