--- a/.env.production.local
+++ b/.env.production.local
@@ -6,6 +6,6 @@ AUTH0_POST_LOGOUT_REDIRECT_URI= http://localhost:3000
 AUTH0_COOKIE_SECRET=297349274958y9586972398494969246
 AUTH0_NAMESPACE: http://mcct-co-op.us.auth0.com
 
-AUTH0_AUDIENCE=http://mcct-co-op.us.auth0.com/api/v2/
+AUTH0_AUDIENCE=https://mcct-co-op.us.auth0.com/api/v2/
 PORTFOLIO_API_URL=http://localhost:3001/api/v1
 
