--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "jwks-rsa": "^1.12.1",
+    "mongodb": "^2.2.16",
     "mongoose": "^5.11.9",
     "nodemon": "^2.0.6",
     "request": "^2.88.2"
