--- a/.env.development.local
+++ b/.env.development.local
@@ -8,5 +8,5 @@ AUTH0_NAMESPACE: http://mcct-co-op.us.auth0.com
 
 
 AUTH0_AUDIENCE=https://mcct-co-op.us.auth0.com/api/v2/
-PORTFOLIO_API_URL=http://localhost:3001/api/v1/
+PORTFOLIO_API_URL=http://localhost:3001/api/v1
 
