--- a/.env.development.local
+++ b/.env.development.local
@@ -1,11 +1,9 @@
-AUTH0_DOMAIN=mcct-co-op.us.auth0.com
+AUTH0_DOMAIN=mcct-co-op.us.auth0.com/
 AUTH0_CLIENT_ID=C6G1X9OSpTFENPHTfBZ77xR55GjvPik4
 AUTH0_CLIENT_SECRET=mM408GZE5Red3Hwk-wwFmMiw0hLXLXO_P44b1MJrwjt0G-B1Mcsst11VPpQZ0QYI
-AUTH0_REDIRECT_URI=https://mcct-co-op.herokuapp.com//api/v1/callback/
-AUTH0_POST_LOGOUT_REDIRECT_URI=https://mcct-co-op.herokuapp.com/
+AUTH0_REDIRECT_URI=http://localhost:3000/api/v1/callback
+AUTH0_POST_LOGOUT_REDIRECT_URI= http://localhost:3000
 AUTH0_COOKIE_SECRET=297349274958y9586972398494969246
-AUTH0_NAMESPACE: http://mcct-co-op.us.auth0.com
 
-AUTH0_AUDIENCE=https://mcct-co-op.us.auth0.com/api/v2/
-PORTFOLIO_API_URL=https://mcct-co-op-api.herokuapp.com//api/v1
 
+PORTFOLIO_API_URL=http://localhost:3001/api/v1
