--- a/.env.development.local
+++ b/.env.development.local
@@ -4,6 +4,7 @@ AUTH0_CLIENT_SECRET=mM408GZE5Red3Hwk-wwFmMiw0hLXLXO_P44b1MJrwjt0G-B1Mcsst11VPpQZ
 AUTH0_REDIRECT_URI=http://localhost:3000/api/v1/callback
 AUTH0_POST_LOGOUT_REDIRECT_URI= http://localhost:3000
 AUTH0_COOKIE_SECRET=297349274958y9586972398494969246
+DB_URI=mongodb+srv://test:HxEfrzlzN1EVj2ov@cluster0.dxotk.mongodb.net/MCCT?retryWrites=true&w=majority
 
 
 PORTFOLIO_API_URL=http://localhost:3001/api/v1
