--- a/.env.production.local
+++ b/.env.production.local
@@ -5,6 +5,7 @@ AUTH0_REDIRECT_URI=https://mcct-co-op.herokuapp.com/api/v1/callback/
 AUTH0_POST_LOGOUT_REDIRECT_URI=https://mcct-co-op.herokuapp.com
 AUTH0_COOKIE_SECRET=297349274958y9586972398494969246
 AUTH0_NAMESPACE: http://mcct-co-op.us.auth0.com
+DB_URI=mongodb+srv://test:HxEfrzlzN1EVj2ov@cluster0.dxotk.mongodb.net/MCCT?retryWrites=true&w=majority
 
 AUTH0_AUDIENCE=https://mcct-co-op.us.auth0.com/api/v2
 PORTFOLIO_API_URL=https://mcct-co-op-api.herokuapp.com/api/v1
