--- a/.env.production.local
+++ b/.env.production.local
@@ -1,8 +1,8 @@
 AUTH0_DOMAIN=mcct-co-op.us.auth0.com
 AUTH0_CLIENT_ID=C6G1X9OSpTFENPHTfBZ77xR55GjvPik4
 AUTH0_CLIENT_SECRET=mM408GZE5Red3Hwk-wwFmMiw0hLXLXO_P44b1MJrwjt0G-B1Mcsst11VPpQZ0QYI
-AUTH0_REDIRECT_URI=https://mcct-co-op.herokuapp.com/api/v1/callback/
-AUTH0_POST_LOGOUT_REDIRECT_URI=https://mcct-co-op.herokuapp.com
+AUTH0_REDIRECT_URI=https://mcct-co-op.vercel.app/api/v1/callback/
+AUTH0_POST_LOGOUT_REDIRECT_URI=mcct-co-op-jbpy34g6r.vercel.app
 AUTH0_COOKIE_SECRET=297349274958y9586972398494969246
 AUTH0_NAMESPACE: http://mcct-co-op.us.auth0.com
 DB_URI=mongodb+srv://test:HxEfrzlzN1EVj2ov@cluster0.dxotk.mongodb.net/MCCT?retryWrites=true&w=majority
